Revert getFirst usage to get(0)
Signed-off-by: sugarylump <alexcarvalhoflores@gmail.com>